# pdf-generator

./: README.md  pyproject.toml
assignment/: settings.py  urls.py
pdf_generator/: apps.py  helpers.py  urls.py  views.py
